<resources>
    <string name="app_name">JahitanQu</string>
    <string name="facebook_app_id">2672248849713023</string>
    <string name="fb_login_protocol_scheme">fb2672248849713023</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="textUsingSocialMedia">or using your social media account</string>
    <string name="facebook_connect">Facebook Connect</string>
    <string name="google_account">Google Account</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="firstname">Firstname</string>
    <string name="lastName">Lastname</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="have_you_already_had_an_account">Have you already had an account ?</string>
    <string name="login_now">Login Now</string>
    <string name="facebook_auth">facebookAuthentication</string>
    <string name="google_sign_in_filed">Google sign in failed</string>
    <string name="sign_in_with_credential_filed">signInWithCredential:failure</string>
    <string name="onCancel">onCancel</string>
    <string name="onEroor">Error</string>
    <string name="register_now">Register Now</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="history">History</string>
    <string name="active">Active</string>
    <string name="my_order">My Order</string>
    <string name="description_order">Description Order</string>
    <string name="detail_order">Detail Order</string>
    <string name="order">Order</string>
    <string name="chat">Chat</string>
    <string name="contact">Contact</string>
    <string name="reservation">Reservation</string>
    <string name="portofolio">Portofolio</string>
    <string name="progressbar_loading">Loading</string>
    <string name="transaction_success">Transaction Was Created</string>
    <string name="not_found_id_customer">Please Register your account in jahitanQu before you want to reservation</string>
    <string name="location_denied">Location permission denied</string>
    <string name="Success">Success</string>
    <string name="edit_account">Success Edit Account</string>
    <string name="opps">Oops...</string>
    <string name="email_password_incorrect">Email or password is incorrect!</string>
    <string name="please_fill_in_all_fields">please fill in all fields</string>
    <string name="registration_failed">Registration Failed</string>
    <string name="warning_message">Warning !!</string>

</resources>
