<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.views.authentication.fragment.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="vertical"
            android:paddingBottom="16dp">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:src="@drawable/jahitanqu" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEtEmail"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:focusedByDefault="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_email_black_24dp"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/roboto_light"
                    android:hint="@string/email"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEtPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_lock_black_24dp"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/roboto_light"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:backgroundTint="@color/colorDarkBrown"
                android:fontFamily="@font/roboto_medium"
                android:padding="16dp"
                android:text="@string/login"
                android:textColor="@android:color/white"
                app:cornerRadius="5dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/roboto_light"
                android:padding="16dp"
                android:text="@string/textUsingSocialMedia"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/btnLoginFb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:background="@drawable/ic_button_custom"
                android:clickable="true"
                android:drawableLeft="@drawable/ic_facebook"
                android:drawablePadding="24dp"
                android:fontFamily="@font/roboto_light"
                android:padding="16dp"
                android:text="@string/facebook_connect"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:cornerRadius="5dp" />

            <TextView
                android:id="@+id/btnLoginGoogle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="4dp"
                android:layout_marginRight="8dp"
                android:background="@drawable/ic_button_custom"
                android:clickable="true"
                android:drawableLeft="@drawable/ic_google_hangouts"
                android:drawablePadding="24dp"
                android:fontFamily="@font/roboto_light"
                android:padding="16dp"
                android:text="@string/google_account"
                android:textAlignment="textStart"
                android:textAllCaps="false"
                android:textSize="16sp"
                app:cornerRadius="5dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/don_t_have_an_account"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/btnRegisterNow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="4dp"
                    android:clickable="true"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/register_now"
                    android:textColor="@color/colorDarkBrown"
                    android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/rlLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:translationZ="1dp"
        android:visibility="gone"
        android:background="@android:color/white">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:lottie_rawRes="@raw/loading"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>